--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "kartik-v/yii2-widget-select2": "^2.0",
         "kartik-v/yii2-widgets": "^3.4",
         "dektrium/yii2-user": "0.9.*@dev",
-        "kartik-v/yii2-widget-sidenav": "*"
+        "kartik-v/yii2-widget-sidenav": "*",
+        "kartik-v/bootstrap-fileinput": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
