--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "kartik-v/yii2-widgets": "^3.4",
         "dektrium/yii2-user": "0.9.*@dev",
         "kartik-v/yii2-widget-sidenav": "*",
-        "kartik-v/bootstrap-fileinput": "dev-master"
+        "kartik-v/bootstrap-fileinput": "dev-master",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
